r=heikki. sr=jst.  Fix for bug 29171.  Create HTML unknown element for non-lowercased elements that are in the XHTML namespace.