layout/html/base/src/nsHTMLParts.h
@@ -261,7 +261,8 @@ NS_NewHTMLUnknownElement(nsIHTMLContent** aResult, nsINodeInfo *aNodeInfo);
  */
 PR_EXTERN(nsresult)
 NS_CreateHTMLElement(nsIHTMLContent** aResult,
-                     nsINodeInfo *aNodeInfo);
+                     nsINodeInfo *aNodeInfo,
+                     PRBool aCaseSensitive = PR_FALSE);
 
 // Factory methods for creating html layout objects
 
